feat: vue template injection

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
 <body>
     <h1>Hello Vue3! 👋</h1>
+    <div id="app">
+        <!-- <h2>Hello bro</h2> This won't display since the template is already injected using Vue createApp -->
+    </div>
+    <script src="./script.js"></script>
 </body>
 
 </html>
