--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Hello Vue3! 👋</h1>
     <div id="app">
-        <!-- <h2>Hello bro</h2> This won't display since the template is already injected using Vue createApp -->
+        <p>{{title}} - {{author}} - {{age}}</p>
     </div>
     <script src="./script.js"></script>
 </body>
