feat: attribute binding add for *a* tag

--- a/index.html
+++ b/index.html
@@ -1,58 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vue3_Firebase</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <style>
-      .box {
-        padding: 100px 0;
-        margin: 20px;
-        width: 400px;
-        background-color: rgb(18, 207, 103);
-        text-align: center;
-        display: inline-block;
-      }
+        .box {
+            padding: 100px 0;
+            margin: 20px;
+            width: 400px;
+            background-color: rgb(18, 207, 103);
+            text-align: center;
+            display: inline-block;
+        }
     </style>
-  </head>
+</head>
 
-  <body>
+<body>
     <h1>Hello Vue3! 👋</h1>
     <div id="app">
-      <div v-if="showBook">
-        <ul>
-            <li v-for="item in books">
-                <h3>{{item.title}}</h3> <p>{{item.author}}</p>
-            </li>
-        </ul>
-        <br />
-        <button
-          @click="updateTitle('The Legend of King Arthur: The Sword in the Stone and the Lady of the London')"
-        >
-          Update Book Title
-        </button>
-        <button @click="toggleBooks">Hide Books</button>
-      </div>
+        <a :href="url">Best Website in the world ⚓️</a>
+        <div v-if="showBook">
+            <ul>
+                <li v-for="item in books">
+                    <h3>{{item.title}}</h3>
+                    <p>{{item.author}}</p>
+                    </li>
+                    </ul>
+                    <br />
+                    <button
+                @click="updateTitle('The Legend of King Arthur: The Sword in the Stone and the Lady of the London')">
+                Update Book Title
+            </button>
+            <button @click="toggleBooks">Hide Books</button>
+        </div>
 
-      <div v-else>
-        <button @click="toggleBooks">ShowBook</button>
-      </div>
+        <div v-else>
+            <button @click="toggleBooks">ShowBook</button>
+        </div>
 
-      <div v-show="showBook">
-        Currently Showing Books
-      </div>
+        <div v-show="showBook">
+            Currently Showing Books
+        </div>
 
-      <!-- Mouse Events -->
-      <br>
-      <br>
+        <!-- Mouse Events -->
+        <br>
+        <br>
 
-      <div class="box" @mouseover="handleEvent($event, 5)">Mouseover (enter)</div>
-      <div class="box" @mouseleave="handleEvent">Mouseleave</div>
-      <div class="box" @dblclick="handleEvent">double click</div>
-      <div class="box" @mousemove="handleMouseMove">Position - {{x}}  {{y}}</div>
+        <div class="box" @mouseover="handleEvent($event, 5)">Mouseover (enter)</div>
+        <div class="box" @mouseleave="handleEvent">Mouseleave</div>
+        <div class="box" @dblclick="handleEvent">double click</div>
+        <div class="box" @mousemove="handleMouseMove">Position - {{x}} {{y}}</div>
     </div>
     <script src="./script.js"></script>
-  </body>
+</body>
+
 </html>
