--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div v-if="showlegends">
             <ul>
                 <li v-for="item in legends">
-                    <img src="" alt="">
+                    <img style="max-width: 400px;" :src=item.img alt="">
                     <h3>{{item.title}}</h3>
                     <p>{{item.author}}</p>
                     </li>
