feat: fav class add

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             display:flex;
             align-items:center;
             justify-content: space-between;
+            padding:10px 20px;
+        }
+        li.fav{
+            background: #ff9ed2;
+            color:#fff;
         }
         /* .box {
             padding: 100px 0;
