--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Vue3_Firebase</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
         body{
             background-color: #eee;
+            font-family: 'Rubik', sans-serif;
             max-width:960px;
             margin:20px auto;
         }
